# limited_opencv

./: CMakeLists.txt  readme.md
lib/: opencv_core4120.lib  opencv_imgcodecs4120.lib  opencv_imgproc4120.lib  opencv_videoio4120.lib
main/: main.cpp
opencv_builds/windows-amd64-dynamic/lib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  opencv_imgcodecs4120.lib  opencv_videoio4120.lib
opencv_builds/windows-amd64-static/include/opencv2/: cvconfig.h
opencv_builds/windows-amd64-static/lib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  ipphal.lib  ippiw.lib  ittnotify.lib  libjpeg-turbo.lib  libopenjp2.lib  libpng.lib  libtiff.lib  libwebp.lib  zlib.lib
windows/lib/: opencv_core4120.lib  opencv_imgproc4120.lib
